@@ -149,11 +149,7 @@ Daniel Molina \email{dmolina@decsai.ugr.es}
 
 José M. Benítez \email{j.m.benitez@decsai.ugr.es}
 
-DiCITS Lab, Sci2s group, DECSAI, University of Granada. \url{http://sci2s.ugr.es/dicits/}.
-
-Additional information is also available at our group's website of continuous optimization:
-
-\url{http://sci2s.ugr.es/EAMHCO/}
+DiCITS Lab, Sci2s group, DECSAI, University of Granada.
 }
 \references{
 Bergmeir, C., Molina, D., Benítez, J.M. 
