@@ -1,3 +1,7 @@
+13/3/2019 version 0.2-5:
+
+- fixed a warning
+
 28/4/2018 version 0.2-4:
 
 - fixed a warning and some other CRAN issues
